--- a/css/srd.less
+++ b/css/srd.less
@@ -23,8 +23,15 @@
 }
 
 
+#page_header { 
+	h1 {  
+		a {
+			text-indent: -9999px;
+		}
+	}
+}
+
 nav .menu .page-item-2 a:before {
-	content:'Yo dude' !important;
 	color:#c00 !important;
 }
 
@@ -112,4 +119,16 @@ nav .menu .page-item-2 a:before {
 
 #work_pullout.expanded {
 	height:300px;
+}
+
+nav {
+	.menu ul {
+		li {
+			margin-right:20px !important;
+			a {
+				width: 46px;
+				padding-left: 4px;
+			}
+		}
+	}	
 }
