--- a/css/transitions.css
+++ b/css/transitions.css
@@ -1,5 +1,17 @@
 #follow_list {
 	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .2s cubic-bezier(0.42, 0, 0.58, 1.0); 
-	-o-transition: all .2s cubic-bezier(0.42, 0, 0.58, 1.0); 
+	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
+#content.post #content_secondary {
+	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
+#sticky_footer {
+	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
