--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,6 @@
   background-color: rgba(255, 255, 0, 0.5);
 }
 #page_footer {
-  background: #5d504f;
   padding-top: 40px;
   padding-bottom: 60px;
   color: #f0eceb;
@@ -62,14 +61,59 @@
 #page_footer #cat_navigation li li:first-child {
   margin: 0;
 }
+#page_heel {
+  padding: 15px 0;
+  color: #fefafa;
+}
 /* @group Sticky Footer */
 #sticky_footer {
   width: 100%;
   background-color: rgba(42, 32, 30, 0.75);
   position: fixed;
   overflow: hidden;
-  height: 15px;
+  height: 30px;
   bottom: 0;
   z-index: 99999;
+}
+#sticky_footer.light {
+  background-color: rgba(254, 250, 250, 0.75);
+}
+footer #page_footer_secondary {
+  display: table;
+  table-layout: fixed;
+  border-spacing: 20px;
+  border-collapse: separate;
+  border: 1px solid #000;
+}
+#page_footer_secondary .widget {
+  width: 190px;
+  display: table-cell;
+  background: #c00;
+}
+#page_footer_secondary .widget:last-child {
+  padding-right: 0px;
+}
+#page_footer .widget {
+  float: left;
+  margin-right: 20px;
+  width: 190px;
+  margin-bottom: 20px;
+}
+#page_footer .widget:nth-child(4n+1) {
+  width: 330px;
+  clear: left;
+}
+#page_footer .widget:nth-child(4n) {
+  margin-right: 0;
+}
+/*ie hacks - need to define first and last divs to apply special rules. ie7 may need equal height hack*/
+#page_footer .item-0, #page_footer .item-4 {
+  background: #c00;
+  clear: left;
+  width: 330px;
+}
+#page_footer .item-3, #page_footer .item-7 {
+  background: #0c0;
+  margin-right: 0;
 }
 /* @end */
