--- a/css/footer.less
+++ b/css/footer.less
@@ -5,6 +5,8 @@
 @color_dark: 		#3d302f;
 @color_off_black: 	#050000;
 
+@row-height:		15px;
+
 .reset-dimensions {
 	margin:0;
 	padding:0;
@@ -20,7 +22,6 @@
 
 #page_footer 
 {
-	background:@color_midtone;
 	padding-top: 40px;
 	padding-bottom: 60px;
 	color: #f0eceb;
@@ -73,6 +74,11 @@
 	}
 }
 
+#page_heel {
+	padding:(@row-height) 0;
+	color:@color_highlight;
+} 
+
 /* @group Sticky Footer */
 
 #sticky_footer
@@ -81,9 +87,63 @@
 	background-color: rgba(42,32,30,.75);
 	position: fixed;
 	overflow: hidden;
-	height:15px;
+	height:30px;
 	bottom: 0;
 	z-index: 99999;
 }
+
+#sticky_footer.light
+{
+	background-color: rgba(254,250,250,.75);
+}
+
+
+footer #page_footer_secondary { 
+   display:table; 
+	table-layout:fixed;
+	border-spacing:20px;
+    border-collapse:separate; 
+	border:1px solid #000;
+}
+ 
+#page_footer_secondary .widget { 
+	width:190px;
+    display:table-cell; 
+	background:#c00;
+}
+
+#page_footer_secondary .widget:last-child {
+	padding-right:0px;
+}
+
+#page_footer .widget {
+	float:left;
+	margin-right:20px;
+	width:190px;
+	margin-bottom:20px;
+}
+
+#page_footer .widget:nth-child(4n+1) {
+	width:330px;
+	clear:left;
+}
+
+#page_footer .widget:nth-child(4n) {
+	margin-right:0;
+}
+
+/*ie hacks - need to define first and last divs to apply special rules. ie7 may need equal height hack*/
+
+#page_footer .item-0, #page_footer .item-4 {
+	background:#c00;
+	clear:left;
+	width:330px;
+}
+
+#page_footer .item-3, #page_footer .item-7 {
+	background:#0c0;
+	margin-right:0;
+}
+
 
 /* @end */
