--- a/css/forms.css
+++ b/css/forms.css
@@ -1,15 +1,3 @@
-textarea {
-  font-size: 12px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-input.textinput, #s, textarea {
-  border: 1px solid #5d504f;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #5d504f;
-}
-form input.button {
-  border: none;
-  height: 20px;
-  margin: 0;
-  cursor: pointer;
-}
+textarea{font-size:12px;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;}
+input.textinput,#s,textarea{border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;}
+form input.button{border:none;height:20px;margin:0;cursor:pointer;}
