--- a/css/header.css
+++ b/css/header.css
@@ -17,13 +17,15 @@
 }
 #page_header h1 a {
   text-decoration: none;
-  color: #000;
-  text-indent: -9999px;
-  width: 140px;
+  color: #fefafa;
+  font-size: 11px;
+  line-height: 15px;
+  width: 120px;
   height: 15px;
   display: block;
+  font-weight: bold;
+  padding-left: 20px;
   background: #170d0e;
-  border: none !important;
 }
 #page_header h1 a:hover {
   background: #ff1e00;
@@ -45,9 +47,15 @@
   display: block;
   width: 630px;
 }
+#page_header nav .menu ul ul {
+  display: none;
+}
+#page_header nav .menu ul li:before {
+  content: '';
+}
 #page_header nav .menu ul li {
   float: left;
-  margin-right: 20px;
+  margin-right: 30px;
   background: none;
   padding: 0;
 }
@@ -55,11 +63,9 @@
   display: block;
   text-decoration: none;
   font-weight: bold;
-  width: 46px;
   height: 15px;
   color: #fefafa;
   font-size: 11px;
-  padding-left: 4px;
   padding-top: 0px;
 }
 #page_header nav .menu ul li a:hover {
@@ -117,12 +123,22 @@
 #page_header #search.active #search_button {
   background: #5d504f url(images/icons/magnifying_glass_alt_12x12.png) no-repeat center center;
 }
-#promo #promo_about p, #promo #promo_new p, #promo #promo_follow p {
+#sub_header p {
   font-size: 12px;
-  color: #463938;
+  color: #5d504f;
   line-height: 15px;
   margin-top: 0;
 }
-#promo #promo_about p {
-  font-weight: bold;
+#sub_header .widget {
+  float: left;
+  margin-right: 20px;
+  width: 190px;
+  margin-bottom: 20px;
+}
+#sub_header .widget:nth-child(4n+1) {
+  width: 330px;
+  clear: left;
+}
+#sub_header .widget:nth-child(4n) {
+  margin-right: 0;
 }
