--- a/css/iconic.css
+++ b/css/iconic.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'IconicStroke';
-    src: url("iconic_stroke.eot");
+    src: url("../fonts/iconic_stroke.eot");
     src: local('IconicStroke'),
-       url("iconic_stroke.svg#iconic") format('svg'),
-	   url("iconic_stroke.otf") format('opentype');
+       url("../fonts/iconic_stroke.svg#iconic") format('svg'),
+	   url("../fonts/iconic_stroke.otf") format('opentype');
 }
 
 .iconic {
@@ -16,7 +16,7 @@
 }
 
 .iconic {
-	line-height:20px;
+	line-height:15px;
 }
 
 a.iconic:hover {
