--- a/less/forms.less
+++ b/less/forms.less
@@ -15,3 +15,10 @@ form input.button {
 	margin: 0;
 	cursor: pointer;
 }
+
+input[type=text] {
+	border: 1px solid #5d504f;
+	background:none;
+	-webkit-border-radius: 0px;
+	-webkit-box-shadow: 0px 0px 0px #FFFFFF;
+}
