--- a/less/global.less
+++ b/less/global.less
@@ -17,7 +17,7 @@
 }
 
 .incomplete {
-	background-color: rgba(255,0,255,0);
+	background-color: rgba(255,0,255,.5);
 }
 
 .show-bounds {
@@ -66,6 +66,7 @@ body {
 
 a {
 	color: #5d504f;
+	text-decoration:underline;
 	img { border: none; }
 }
 a.external { text-decoration: none; border-bottom: 1px dotted #5d504f; }
@@ -85,17 +86,14 @@ h6 { font-size: 12px; padding-top: 0px; margin: @row-height 0; }
 blockquote {
 	margin: 15px 0px;
 	padding: 0;
-	font-size: 24px;
+	font-size: 17px;
 	line-height: 30px;
 	color:#5d504f;
 	blockquote {
 		margin-top:0;
 	}
 	p {
-		padding: 0;
-		margin:0;
-		margin-bottom:15px;
-		font-size: 24px !important;
+		font-size: 17px !important;
 		line-height:30px !important;
 	}
 	cite {
