--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,9 @@
 .show-bounds {
   background-color: rgba(255, 255, 0, 0.5);
 }
+.incomplete {
+  background-color: rgba(255, 0, 255, 0.5);
+}
 #page_footer {
   padding-top: 40px;
   padding-bottom: 60px;
@@ -64,6 +67,7 @@
 #page_heel {
   padding: 15px 0;
   color: #fefafa;
+  padding-bottom: 30px;
 }
 /* @group Sticky Footer */
 #sticky_footer {
@@ -77,21 +81,6 @@
 }
 #sticky_footer.light {
   background-color: rgba(254, 250, 250, 0.75);
-}
-footer #page_footer_secondary {
-  display: table;
-  table-layout: fixed;
-  border-spacing: 20px;
-  border-collapse: separate;
-  border: 1px solid #000;
-}
-#page_footer_secondary .widget {
-  width: 190px;
-  display: table-cell;
-  background: #c00;
-}
-#page_footer_secondary .widget:last-child {
-  padding-right: 0px;
 }
 #page_footer .widget {
   float: left;
