--- a/css/forms.css
+++ b/css/forms.css
@@ -1,3 +1,24 @@
-textarea{font-size:12px;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;}
-input.textinput,#s,textarea{border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;}
-form input.button{border:none;height:20px;margin:0;cursor:pointer;}
+textarea {
+  font-size: 12px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+input.textinput, #s, textarea {
+  border: 1px solid #5d504f;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #5d504f;
+}
+form input.button {
+  margin: 0;
+  cursor: pointer;
+}
+input[type=text] {
+	border: 1px solid #5d504f;
+}
+
+input[type=submit] {
+	border:0;
+	border-right: 1px solid #5d504f !important;
+	border-bottom: 1px solid #5d504f !important;
+	padding:4px 10px 6px 10px !important;
+	background:none !important;
+}
