--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 .incomplete {
-  background-color: rgba(255, 0, 255, 0);
+  background-color: rgba(255, 0, 255, 0.5);
 }
 .show-bounds {
   background-color: rgba(255, 255, 0, 0.5);
@@ -52,6 +52,7 @@ body {
 }
 a {
   color: #5d504f;
+  text-decoration: underline;
 }
 a img {
   border: none;
@@ -117,7 +118,7 @@ h6 {
 blockquote {
   margin: 15px 0px;
   padding: 0;
-  font-size: 24px;
+  font-size: 17px;
   line-height: 30px;
   color: #5d504f;
 }
@@ -125,10 +126,7 @@ blockquote blockquote {
   margin-top: 0;
 }
 blockquote p {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 15px;
-  font-size: 24px !important;
+  font-size: 17px !important;
   line-height: 30px !important;
 }
 blockquote cite {
@@ -256,7 +254,7 @@ hr {
 }
 /* @end */
 .pagination {
-  background-color: rgba(255, 0, 255, 0);
+  background-color: rgba(255, 0, 255, 0.5);
 }
 .post header {
   margin-bottom: 10px;
@@ -265,7 +263,7 @@ hr {
   text-decoration: none;
 }
 .post .callout {
-  background-color: rgba(255, 0, 255, 0);
+  background-color: rgba(255, 0, 255, 0.5);
 }
 .post p .callout {
   padding-top: 0;
