--- a/less/footer.less
+++ b/less/footer.less
@@ -20,6 +20,11 @@
 	opacity:@level;
 }
 
+.incomplete {
+	background-color: rgba(255,0,255,.5);
+}
+
+
 #page_footer 
 {
 	padding-top: 40px;
@@ -77,6 +82,7 @@
 #page_heel {
 	padding:(@row-height) 0;
 	color:@color_highlight;
+	padding-bottom:(@row-height*2);
 } 
 
 /* @group Sticky Footer */
@@ -95,25 +101,6 @@
 #sticky_footer.light
 {
 	background-color: rgba(254,250,250,.75);
-}
-
-
-footer #page_footer_secondary { 
-   display:table; 
-	table-layout:fixed;
-	border-spacing:20px;
-    border-collapse:separate; 
-	border:1px solid #000;
-}
- 
-#page_footer_secondary .widget { 
-	width:190px;
-    display:table-cell; 
-	background:#c00;
-}
-
-#page_footer_secondary .widget:last-child {
-	padding-right:0px;
 }
 
 #page_footer .widget {
